fix bug 532603, r=bienvenu, sr=neil, plain text attachment with application/octet-stream content type doesn't show inline